test/integration/bad/data_index/non_data_index9.stan
parameters {
  array[3] real y;

}
transformed parameters {
  unit_vector[size(y)] z;
}
